Terraform/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 3.0"
    }
  }
}

provider "aws" {
  region  = "ap-south-1"
  access_key = var.aws_access_key
  secret_key = var.aws_secret_key
}
#creating VPC
resource "aws_vpc" "app" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "App"
    Location = "Gurugram"
  }
}

#subnet Public
resource "aws_subnet" "Public" {
  vpc_id     = aws_vpc.app.id
  #using interolation
  cidr_block = "10.0.0.0/24"
  availability_zone = "ap-south-1a"
  map_public_ip_on_launch = true
  tags = {
    Name = "Public"
    Location = "Gurugram"
  }
}

#Subnet Private
resource "aws_subnet" "Private" {
  vpc_id     = aws_vpc.app.id
  #using interolation
  cidr_block = "10.0.1.0/24"
  availability_zone = "ap-south-1b"

  tags = {
    Name = "Private"
    Location = "Gurugram"
  }
}

#Internet Gateway
resource "aws_internet_gateway" "gateway" {
  vpc_id = aws_vpc.app.id

  tags = {
    Name = "Internetgateway"
  }
}

#Public route table
resource "aws_route_table" "public-route-table" {
  vpc_id = aws_vpc.app.id

   tags = {
    Name = "Public Route"
  }
}  

#Create Route in Route Table for Internet Access
resource "aws_route" "vpc-public-route" {
  route_table_id         = aws_route_table.public-route-table.id
  destination_cidr_block = "0.0.0.0/0"    #set for all 
  gateway_id             = aws_internet_gateway.gateway.id
}

#Associate the Route Table with the Subnet
resource "aws_route_table_association" "public-route-table-associate" {
  route_table_id = aws_route_table.public-route-table.id
  subnet_id      = aws_subnet.Public.id
}

#Private route table
resource "aws_route_table" "private-route-table" {
  vpc_id = aws_vpc.app.id

   tags = {
    Name = "Private Route"
  }
}  

/*
# As cost is associated with the nat and eip right now not creating it 
#elasticip
resource "aws_eip" "eip" {
  vpc      = true
}


#nat 
resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.eip.id
  subnet_id     = aws_subnet.Public.id

  tags = {
    Name = "Nat"
  }
}

#Create Route in Route Table for Nat
resource "aws_route" "vpc-rivate-route" {
  route_table_id         = aws_route_table.private-route-table.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_nat_gateway.nat.id
}

#Associate the Route Table with the Subnet
resource "aws_route_table_association" "private-route-table-associate" {
  route_table_id = aws_route_table.private-route-table.id
  subnet_id      = aws_subnet.Private.id
}

*/

#this is storing the state file  | have to initiate terraform init again
terraform {
  backend "s3" {
    bucket = "terraform-state-nj2022"
    key    = "eks/terraform.tfstate"
    region = "ap-south-1"
  }
}


#Kubernetes clusters managed by Amazon EKS make calls to other AWS services on your behalf to manage the resources that
 #you use with the service.
resource "aws_iam_role" "demo" {
  name = "eks-cluster-demo"

  assume_role_policy = <<POLICY
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Principal": {
        "Service": "eks.amazonaws.com"
      },
      "Action": "sts:AssumeRole"
    }
  ]
}
POLICY
}
#This policy provides Kubernetes the permissions it requires to manage resources on your behalf. 
#Kubernetes requires Ec2:CreateTags permissions to place identifying information on EC2 resources 
#including but not limited to Instances, Security Groups, and Elastic Network Interfaces.

resource "aws_iam_role_policy_attachment" "demo-AmazonEKSClusterPolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
  role       = aws_iam_role.demo.name
}

resource "aws_eks_cluster" "demo" {
  name     = "demo"
  role_arn = aws_iam_role.demo.arn    # we already created the role and we now attaching the role to the policy

  vpc_config {
    subnet_ids = [
      #commenting out private vpc as right now not using it 
      # aws_subnet.Private.id,
      aws_subnet.Public.id,
    ]
  }

  depends_on = [aws_iam_role_policy_attachment.demo-AmazonEKSClusterPolicy]
}

# creating Iam role for eks node will attach three policies in this 
resource "aws_iam_role" "nodes" {
  name = "eks-node-group-nodes"

  assume_role_policy = jsonencode({
    Statement = [{
      Action = "sts:AssumeRole"
      Effect = "Allow"
      Principal = {
        Service = "ec2.amazonaws.com"
      }
    }]
    Version = "2012-10-17"
  })
}

# This policy allows Amazon EKS worker nodes to connect to Amazon EKS Clusters.
resource "aws_iam_role_policy_attachment" "nodes-AmazonEKSWorkerNodePolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
  role       = aws_iam_role.nodes.name
}

#This policy provides the Amazon VPC CNI Plugin (amazon-vpc-cni-k8s) the permissions it requires to 
#modify the IP address configuration on your EKS worker nodes. This permission set allows the CN

resource "aws_iam_role_policy_attachment" "nodes-AmazonEKS_CNI_Policy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
  role       = aws_iam_role.nodes.name
}

#rovides read-only access to Amazon EC2 Container Registry repositories.
resource "aws_iam_role_policy_attachment" "nodes-AmazonEC2ContainerRegistryReadOnly" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
  role       = aws_iam_role.nodes.name
}

resource "aws_eks_node_group" "private-nodes" {
  cluster_name    = aws_eks_cluster.demo.name
  node_group_name = "private-nodes"
  node_role_arn   = aws_iam_role.nodes.arn

  subnet_ids = [
    aws_subnet.Private.id,
    
  ]

  capacity_type  = "ON_DEMAND"
  instance_types = ["t2.small"]

  scaling_config {
    desired_size = 1
    max_size     = 2
    min_size     = 1
  }

  update_config {
    max_unavailable = 1
  }

  labels = {
    role = "general"
  }

  # taint {
  #   key    = "team"
  #   value  = "devops"
  #   effect = "NO_SCHEDULE"
  # }

  # launch_template {
  #   name    = aws_launch_template.eks-with-disks.name
  #   version = aws_launch_template.eks-with-disks.latest_version
  # }

  depends_on = [
    aws_iam_role_policy_attachment.nodes-AmazonEKSWorkerNodePolicy,
    aws_iam_role_policy_attachment.nodes-AmazonEKS_CNI_Policy,
    aws_iam_role_policy_attachment.nodes-AmazonEC2ContainerRegistryReadOnly,
  ]
}

# resource "aws_launch_template" "eks-with-disks" {
#   name = "eks-with-disks"

#   key_name = "local-provisioner"

#   block_device_mappings {
#     device_name = "/dev/xvdb"

#     ebs {
#       volume_size = 50
#       volume_type = "gp2"
#     }
#   }
# }

###To manage permissions for your applications that you deploy in Kubernetes. You can either attach policies to Kubernetes nodes directly. In that case, every pod will get the same access to AWS resources. Or you can create OpenID connect provider, 
#which will allow granting IAM permissions based on the service account used by the pod.

data "tls_certificate" "eks" {
  url = aws_eks_cluster.demo.identity[0].oidc[0].issuer
}

resource "aws_iam_openid_connect_provider" "eks" {
  client_id_list  = ["sts.amazonaws.com"]
  thumbprint_list = [data.tls_certificate.eks.certificates[0].sha1_fingerprint]
  url             = aws_eks_cluster.demo.identity[0].oidc[0].issuer
}


##
data "aws_iam_policy_document" "test_oidc_assume_role_policy" {
  statement {
    actions = ["sts:AssumeRoleWithWebIdentity"]
    effect  = "Allow"

    condition {
      test     = "StringEquals"
      variable = "${replace(aws_iam_openid_connect_provider.eks.url, "https://", "")}:sub"
      values   = ["system:serviceaccount:default:aws-test"]
    }

    principals {
      identifiers = [aws_iam_openid_connect_provider.eks.arn]
      type        = "Federated"
    }
  }
}

resource "aws_iam_role" "test_oidc" {
  assume_role_policy = data.aws_iam_policy_document.test_oidc_assume_role_policy.json
  name               = "test-oidc"
}

resource "aws_iam_policy" "test-policy" {
  name = "test-policy"

  policy = jsonencode({
    Statement = [{
      Action = [
        "s3:ListAllMyBuckets",
        "s3:GetBucketLocation"
      ]
      Effect   = "Allow"
      Resource = "arn:aws:s3:::*"
    }]
    Version = "2012-10-17"
  })
}

resource "aws_iam_role_policy_attachment" "test_attach" {
  role       = aws_iam_role.test_oidc.name
  policy_arn = aws_iam_policy.test-policy.arn
}

output "test_policy_arn" {
  value = aws_iam_role.test_oidc.arn
}
